match default layout to be inline with my github portfolio

--- a/_Layouts/default.html
+++ b/_Layouts/default.html
@@ -3,12 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <style>
+      body, html {
+        height: 100%;
+        margin: 0;
+      }
+      
+      .bg {
+        /* The image used */
+        background-image: url("/assets/images/marcus-lenk-2_unsplash.jpg");
+      
+        /* Full height */
+        height: 100%; 
+      
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
+    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
     {% feed_meta %}
     {% seo %}
   </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
+  <body class="bg">
+    <div id="wrapper" class="fade-in">
+      				<!-- Header -->
+					<header id="header">
+						<a class="logo">Blogs</a>
+					</header>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li class="active"><a href="index.html">Home</a></li>						
+							<li class="active"><a href="#footer">Contact</a></li>						
+						</ul>
+						<ul class="icons">							
+							<li><a href="https://www.linkedin.com/in/jordan-nash-87b042173/" title="Linked In" class="icon brands fa-linkedin"><span class="label">linked In</span></a></li>
+							<li><a href="https://github.com/LayersOfAbstraction/" title="Github" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+          </nav>
+          				<!-- Main -->
+					<div id="main">
+
+						<!-- Posts -->
+						<div id="projects">
+							<section class="posts">
+								<article>
+                  {% include navigation.html %}
+                  {{ content }}
+								</article>
+							</section>								
+						</div>		
+
+    </div>
   </body>
 </html>
