--- a/_Layouts/default.html
+++ b/_Layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <style>
       body, html {
@@ -24,7 +25,6 @@
         background-size: cover;
       }
     </style>
-    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
     {% feed_meta %}
     {% seo %}
   </head>
